# tuan

./: Cargo.toml
crates/tuan/: Cargo.toml
crates/tuan-rpc/: Cargo.toml
crates/tuan-rpc/src/: client.rs
crates/tuan/assets/: keybind_config.json  rose-pine-moon-color-theme.json
crates/tuan/src/: globals.rs  main.rs  workspace.rs
crates/tuan/src/buffer/: buffer.rs
crates/tuan/src/document/: buffer.rs  document.rs  line.rs  mod.rs
crates/tuan/src/editor/: line_cache.rs  mod.rs
crates/tuan/src/editor_view/: action.rs  config.rs  cursor.rs  editor_config.rs  editor_view.rs  line.rs  mod.rs  state.rs  view.rs
crates/tuan/src/editor_view/editor_state/: action.rs  cursors.rs  editing.rs  editor_state.rs  focus.rs  keybindings.rs  mod.rs  open.rs  styles.rs
crates/tuan/src/editor_view/paint/: cursor.rs  line.rs  mod.rs
crates/tuan/src/editor_view/state/: action.rs  cursors.rs  key.rs  keybinds.rs  mod.rs  scrolling.rs  state.rs  styles.rs
crates/tuan/src/file/: file.rs
crates/tuan/src/graph_view/: camera.rs  graph.rs  graph_descriptor.rs  graph_feeder.rs  graph_state.rs  graph_view.rs  mod.rs
crates/tuan/src/keybindings/: keybindings.rs  keybindings_config.rs  masonry_keybinds_converter.rs  mod.rs
crates/tuan/src/languages/: mod.rs  typescript.rs
crates/tuan/src/proxy/: proxy.rs
crates/tuan/src/proxy/assets/: proxy.sh
crates/tuan/src/terminal/: event.rs  mod.rs  raw.rs
crates/tuan/src/theme/: mod.rs  style.rs  theme.rs  vscode_theme.rs
docs/adr/: 0001-use-rust-core-language.md  0002-use-xilem-ui-framework.md
