[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
resolver = "3"
members = ["crates/tuan"]
default-members = ["crates/tuan"]

[workspace.dependencies]
xilem = { git = "https://github.com/linebender/xilem", rev = "5e49206" }
masonry = { git = "https://github.com/linebender/xilem", rev = "5e49206" }
winit ={ version = "0.30.0" }
glib = { version = "0.21.0" }
log = { version = "0.4.27" }
tuan-rpc = { git = "https://github.com/tuan-ide/tuan-proxy", package = "lapce-rpc" }
tuan-proxy = { git = "https://github.com/tuan-ide/tuan-proxy", package = "lapce-proxy" }
tuan-core = { git = "https://github.com/tuan-ide/tuan-proxy", package = "lapce-core" }
dirs = { version = "6.0.0" }
