[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
resolver = "3"
members = ["crates/tuan"]
default-members = ["crates/tuan"]

[workspace.dependencies]
alacritty_terminal = { version = "0.25.0" }
xilem = { git = "https://github.com/linebender/xilem", rev = "5e49206" }
masonry = { git = "https://github.com/linebender/xilem", rev = "5e49206" }
winit ={ version = "0.30.0" }
crossbeam-channel = { version = "0.5.15" }
glib = { version = "0.21.0" }
log = { version = "0.4.27" }
parking_lot = { version = "0.12.4" }
serde = { version = "1" }
serde_json = { version = "1" }
tracing = { version = "0.1.0" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tuan-rpc = { git = "https://github.com/tuan-ide/tuan-proxy", package = "lapce-rpc", rev = "e26e06dae6a886cc1f26ea09bdfeff0c1960e240" }
tuan-proxy = { git = "https://github.com/tuan-ide/tuan-proxy", package = "lapce-proxy", rev = "e26e06dae6a886cc1f26ea09bdfeff0c1960e240" }
tuan-core = { git = "https://github.com/tuan-ide/tuan-proxy", package = "lapce-core", rev = "e26e06dae6a886cc1f26ea09bdfeff0c1960e240" }
dirs = { version = "6.0.0" }
hex_color = { version = "3.0.0" }
keybinds = { version = "0.2.0", features = ["winit"] }
fdg-sim = { version = "0.9.1" }
oxc = { version = "0.75.1" }
oxc_ast_visit = { version = "0.75.1" }
oxc_ast = { version = "0.75.1" }
oxc_parser = { version = "0.75.1" }
oxc_resolver = { version = "11.7.1" }
oxc_semantic = { version = "0.75.1" }
oxc_span = { version = "0.75.1" }
oxc_allocator = { version = "0.75.1" }
quad-rand = { version = "0.2.3" }
walkdir = { version = "2.0" }
