[package]
name = "tuan"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
xilem.workspace = true
masonry.workspace = true
winit.workspace = true
glib.workspace = true
log.workspace = true
tuan-rpc.workspace = true
tuan-proxy.workspace = true
tuan-core.workspace = true
dirs.workspace = true
