[package]
name = "tuan"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
alacritty_terminal.workspace = true
crossbeam-channel.workspace = true
xilem.workspace = true
masonry.workspace = true
winit.workspace = true
glib.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tuan-rpc.workspace = true
tuan-proxy.workspace = true
tuan-core.workspace = true
dirs.workspace = true
hex_color.workspace = true
