[package]
name = "tuan"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
alacritty_terminal.workspace = true
crossbeam-channel.workspace = true
xilem.workspace = true
masonry.workspace = true
winit.workspace = true
glib.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tuan-rpc.workspace = true
tuan-proxy.workspace = true
tuan-core.workspace = true
dirs.workspace = true
hex_color.workspace = true
keybinds.workspace = true
fdg-sim.workspace = true
oxc.workspace = true
oxc_ast_visit.workspace = true
oxc_ast.workspace = true
oxc_parser.workspace = true
oxc_resolver.workspace = true
oxc_semantic.workspace = true
oxc_span.workspace = true
oxc_allocator.workspace = true
quad-rand.workspace = true
walkdir.workspace = true
